--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Merriweather', serif;
 }
 
 option {
   color: black;
+}
+
+.border-26-op {
+  opacity: 0.26;
+}
+.bg-03B1B1 {
+  background-color: #03b1b1;
+}
+.bg-00A5A5 {
+  background-color: #00a5a5;
+}
+
+.custom-font {
+  font-family: 'Abhaya Libre', serif;
+  font-weight: 600;
+  font-size: 32px;
+  font-style: normal;
 }
