--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   html {
-    font-family: 'DM Sans', sans-serif !important;
-    font-feature-settings: 'kern' !important;
+    font-family: 'Merriweather', serif;
     -webkit-font-smoothing: antialiased;
     letter-spacing: -0.2px;
   }
